--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".FragmentClass"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".DetailActivity" />
         <activity android:name=".SecondActivity" />
         <activity android:name=".LoginActivity">
